# coding-challenges

./: .gitignore
ccwc/: main.py  pyproject.toml
compression_tool/: Makefile  prefix_table.json  pyproject.toml
compression_tool/app/: main.py
compression_tool/app/controllers/: compressor.py
compression_tool/app/models/: huffman_node.py  letter_frequency.py  metdata.py
compression_tool/app/services/: counter.py  huffman_tree.py
compression_tool/scripts/: test.py
compression_tool/tests/: test.txt.huffman  test_compressor.py  test_counter.py  test_gen_header.py  test_huffman_tree.py
jsonparser/: lexical.py  main.py  parser.py
